--- a/src/main/resources/mongo-es-mapping.json
+++ b/src/main/resources/mongo-es-mapping.json
@@ -14,5 +14,21 @@
 							"type" : "String"
 						}
 					]
+	},
+	{
+		"collection" : "articles",
+		"index" : "articles",
+		"mappings" : [	
+						{
+							"dbField": "author",
+							"esField": "author",
+							"type" : "String"
+						},
+						{
+							"dbField": "content",
+							"esField": "content",
+							"type" : "String"
+						}
+					]
 	}
 ]
